--- a/daftar.html
+++ b/daftar.html
@@ -199,10 +199,29 @@
             box-shadow: 0 0 0 2px #fff, 0 0 0 3px var(--primary-color);
         }
 
+        .form-group label {
+            font-size: 13px;
+        }
+
         select#gender {
             height: 30px;
             width: 100%;
             padding: 3px 6px 5px 13px;
+            font-size: 13px;
+        }
+
+        select#bekerja {
+            height: 30px;
+            width: 100%;
+            padding: 3px 6px 5px 13px;
+            font-size: 13px;
+        }
+
+        select#status {
+            height: 30px;
+            width: 100%;
+            padding: 3px 6px 5px 13px;
+            font-size: 13px;
         }
 
         .logoSec {
@@ -247,117 +266,130 @@
 
 <body>
     <section>
-        <img class="auth-circle" src="./assets/img/EllipseRegist.svg" alt="background-circle">
-        <img class="people-circle" src="./assets/img/formImg.png" alt="background-circle2">
-        <div class="logoSec">
-            <img class="imgLogo" src="./assets/logo/Upstream Champion Portrait Logo Light.png" width="10%" alt="" />
-            <h2 class="text-white">Registration Form</h2>
+        <div class="container">
+            <img class="auth-circle" src="./assets/img/EllipseRegist.svg" alt="background-circle">
+            <img class="people-circle" src="./assets/img/formImg.png" alt="background-circle2">
+            <div class="logoSec">
+                <img class="imgLogo" src="./assets/logo/Upstream Champion Portrait Logo Light.png" width="10%" alt="" />
+                <h2 class="text-white">Registration Form</h2>
+            </div>
+            <div class="formRegist">
+                <form action="#" class="form">
+                    <h4 class="text-center">Please Sign Up to be a Champion!</h4>
+                    <p class="text-center">Silakan Isi Data Diri Anda</p>
+                    <!-- Progress bar -->
+                    <div class="progressbar">
+                        <div class="progress" id="progress"></div>
+                        <div class="progress-step progress-step-active"></div>
+                        <div class="progress-step"></div>
+                        <div class="progress-step"></div>
+
+                    </div>
+
+                    <!-- Steps -->
+                    <div class="form-step form-step-active">
+                        <div class="input-group">
+                            <label for="username">Nama Lengkap</label>
+                            <input class="rounded-pill formhHeight" type="text" name="username" id="username" />
+                        </div>
+                        <div class="form-group">
+                            <label for="gender">Jenis Kelamin</label>
+                            <select class="form-control rounded-pill LineHeight" id="gender">
+                                <option>Laki-Laki</option>
+                                <option>Wanita</option>
+                            </select>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="gender">Usia</label>
+                            <select class="form-control rounded-pill formhHeight" id="gender">
+                                <option>
+                                    <=30 Tahun</option>
+                                <option>31-40 Tahun</option>
+                                <option>41-50 Tahun</option>
+                                <option>>=51 Tahun</option>
+                            </select>
+                        </div>
+
+                        <div class="input-group">
+                            <label for="email">Alamat Email <span class="textMini">(@pertamina.com / @elnusa.co.id
+                                    / @badaklng.com)</span></label>
+                            <input class="rounded-pill formhHeight" type="text" name="email" id="email" />
+                        </div>
+                        <div class="input-group">
+                            <label for="password">Kata Sandi</label>
+                            <input class="rounded-pill formhHeight" type="password" name="password" id="password" />
+                        </div>
+                        <div class="">
+                            <a href="#" class="btn btn-next width-50 ml-auto rounded-pill">Next</a>
+                        </div>
+                    </div>
+                    <div class="form-step">
+                        <div class="input-group">
+                            <label for="username">No. Pekerja</label>
+                            <input class="rounded-pill formhHeight" type="text" name="username" id="username" />
+                        </div>
+                        <div class="input-group">
+                            <label for="position">Posisi</label>
+                            <input class="rounded-pill formhHeight" type="text" name="position" id="position" />
+                        </div>
+
+                        <div class="form-group">
+                            <label for="bekerja">Lama Bekerja</label>
+                            <select class="form-control rounded-pill formhHeight" id="bekerja">
+                                <option> >1 tahun</option>
+                                <option> >5 tahun</option>
+                                <option> >10 tahun</option>
+                                <option> >15 tahun</option>
+                                <option> >20 tahun</option>
+                            </select>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="status">Status Kepegawaian</label>
+                            <select class="form-control rounded-pill formhHeight" id="status">
+                                <option> PWT</option>
+                                <option> PWTT</option>
+                            </select>
+                        </div>
+                        <div class="btns-group mt-5">
+                            <a href="#" class="btn btn-prev rounded-pill ">Previous</a>
+                            <a href="#" class="btn btn-next rounded-pill ">Next</a>
+                        </div>
+                    </div>
+                    <div class="form-step">
+                        <div class="input-group">
+                            <label for="username">1. Alasan ingin mengikuti
+                                Upstream Champion(Jelaskan
+                                dalam minimal tiga kalimat)</label>
+                            <input class="rounded-pill formhHeight" type="text" name="username" id="username" />
+                        </div>
+                        <div class="input-group">
+                            <label for="username">2. Pengalaman/kegiatan yang
+                                pernah diikuti selama bekerja di
+                                Subholding Upstream?
+                                (Misalnya, komunitas lari,
+                                webinar ESG, dan lain
+                                sebagainya).</label>
+                            <input class="rounded-pill formhHeight" type="textarea" name="username" id="username" />
+                        </div>
+                        <div class="input-group">
+                            <label for="username">3. Ide kegiatan yang ingin
+                                direalisasikan ketika terpilih
+                                sebagai Upstream Champion?</label>
+                            <input class="rounded-pill formhHeight" type="text" name="username" id="username" />
+                        </div>
+
+                        <div class="btns-group">
+                            <a href="#" class="btn btn-prev rounded-pill">Previous</a>
+                            <a href="#" class="btn btn-next rounded-pill">Next</a>
+                        </div>
+                    </div>
+
+                </form>
+            </div>
         </div>
 
-        <div class="formRegist">
-            <form action="#" class="form">
-                <h4 class="text-center">Please Sign Up to be a Champion!</h4>
-                <p class="text-center">Silakan Isi Data Diri Anda</p>
-                <!-- Progress bar -->
-                <div class="progressbar">
-                    <div class="progress" id="progress"></div>
-                    <div class="progress-step progress-step-active"></div>
-                    <div class="progress-step"></div>
-                    <div class="progress-step"></div>
-
-                </div>
-
-                <!-- Steps -->
-                <div class="form-step form-step-active">
-                    <div class="input-group">
-                        <label for="username">Nama Lengkap</label>
-                        <input class="rounded-pill formhHeight" type="text" name="username" id="username" />
-                    </div>
-                    <div class="form-group">
-                        <label for="gender">Jenis Kelamin</label>
-                        <select class="form-control rounded-pill LineHeight" id="gender">
-                            <option>Laki-Laki</option>
-                            <option>Wanita</option>
-                        </select>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="gender">Jenis Kelamin</label>
-                        <select class="form-control rounded-pill formhHeight" id="gender">
-                            <option>
-                                <=30 Tahun</option>
-                            <option>31-40 Tahun</option>
-                            <option>41-50 Tahun</option>
-                            <option>>=51 Tahun</option>
-                        </select>
-                    </div>
-
-                    <div class="input-group">
-                        <label for="email">Email <span class="textMini">@pertamina.com / @elnusa.co.id
-                                /@badaklng.com</span></label>
-                        <input class="rounded-pill formhHeight" type="text" name="email" id="email" />
-                    </div>
-                    <div class="input-group">
-                        <label for="password">Password</label>
-                        <input class="rounded-pill formhHeight" type="password" name="password" id="password" />
-                    </div>
-                    <div class="">
-                        <a href="#" class="btn btn-next width-50 ml-auto rounded-pill">Next</a>
-                    </div>
-                </div>
-                <div class="form-step">
-                    <div class="input-group">
-                        <label for="username">No. Pekerja</label>
-                        <input class="rounded-pill formhHeight" type="text" name="username" id="username" />
-                    </div>
-                    <div class="input-group">
-                        <label for="position">Posisi</label>
-                        <input class="rounded-pill formhHeight" type="text" name="position" id="position" />
-                    </div>
-                    <div class="input-group">
-                        <label for="position">Lama Bekerja</label>
-                        <input class="rounded-pill formhHeight" type="text" name="position" id="position" />
-                    </div>
-                    <div class="input-group">
-                        <label for="email">Status Kepegawaian</label>
-                        <input class="rounded-pill formhHeight" type="text" name="email" id="email" />
-                    </div>
-                    <div class="btns-group">
-                        <a href="#" class="btn btn-prev rounded-pill ">Previous</a>
-                        <a href="#" class="btn btn-next rounded-pill ">Next</a>
-                    </div>
-                </div>
-                <div class="form-step">
-                    <div class="input-group">
-                        <label for="username">1. Alasan ingin mengikuti
-                            Upstream Champion(Jelaskan
-                            dalam minimal tiga kalimat)</label>
-                        <input class="rounded-pill formhHeight" type="text" name="username" id="username" />
-                    </div>
-                    <div class="input-group">
-                        <label for="username">2. Pengalaman/kegiatan yang
-                            pernah diikuti selama bekerja di
-                            Subholding Upstream?
-                            (Misalnya, komunitas lari,
-                            webinar ESG, dan lain
-                            sebagainya).</label>
-                        <input class="rounded-pill formhHeight" type="textarea" name="username" id="username" />
-                    </div>
-                    <div class="input-group">
-                        <label for="username">3. Ide kegiatan yang ingin
-                            direalisasikan ketika terpilih
-                            sebagai Upstream Champion?</label>
-                        <input class="rounded-pill formhHeight" type="text" name="username" id="username" />
-                    </div>
-
-                    <div class="btns-group">
-                        <a href="#" class="btn btn-prev rounded-pill">Previous</a>
-                        <a href="#" class="btn btn-next rounded-pill">Next</a>
-                    </div>
-                </div>
-
-            </form>
-        </div>
     </section>
 
 
